# hexlet-demo-1

data/Ресурсы/: ~$Products_import.xlsx
db/: diagram.pgerd  import_data.sql  init_db.sql
src/: __main__.py  makefile  pyproject.toml  settings.py
src/controls/: MainWindow.py  PartnerWidget.py
src/logic/: discounts.py
src/model/: Partner.py  PatrnerType.py
src/repo/: repository.py
src/ui/: main_window.ui  widget.ui
