[tool.poetry]
name = "hexlet-demo-1"
version = "0.1.0"
description = ""
authors = ["Andrei Belskii <mrandrewer@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = "^5.15.11"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
